tests/snapshots/snapshots__fixture_thiserror_impl_subdir_level2.snap
---
source: tests/snapshots.rs
expression: output
---
ast.rs
    10→pub enum Input<'a> {
    15→pub struct Struct<'a> {
    22→pub struct Enum<'a> {
    29→pub struct Variant<'a> {
    36→pub struct Field<'a> {
    45→pub enum ContainerKind {
    54→impl<'a> Input<'a> {
    55→    pub fn from_syn(node: &'a DeriveInput) -> Result<Self> {
    67→impl<'a> Struct<'a> {
    68→    fn from_syn(node: &'a DeriveInput, data: &'a DataStruct) -> Result<Self> {
    85→impl<'a> Enum<'a> {
    86→    fn from_syn(node: &'a DeriveInput, data: &'a DataEnum) -> Result<Self> {
   118→impl<'a> Variant<'a> {
   119→    fn from_syn(node: &'a syn::Variant, scope: &ParamsInScope<'a>) -> Result<Self> {
   130→impl<'a> Field<'a> {
   131→    fn multiple_from_syn(fields: &'a Fields, scope: &ParamsInScope<'a>) -> Result<Vec<Self>> {
   139→    fn from_syn(i: usize, node: &'a syn::Field, scope: &ParamsInScope<'a>) -> Result<Self> {
   156→impl ContainerKind {
   157→    fn from_struct(node: &DataStruct) -> Self {
   165→    fn from_variant(node: &syn::Variant) -> Self {
   174→impl Display for ContainerKind {
   175→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
attr.rs
    11→pub struct Attrs<'a> {
    21→pub struct Display<'a> {
    33→pub struct Source<'a> {
    39→pub struct From<'a> {
    45→pub struct Transparent<'a> {
    51→pub struct Fmt<'a> {
    57→pub enum Trait {
    69→pub fn get(input: &[Attribute]) -> Result<Attrs> {
   124→fn parse_error_attribute<'a>(attrs: &mut Attrs<'a>, attr: &'a Attribute) -> Result<()> {
   196→fn parse_token_expr(input: ParseStream, mut begin_expr: bool) -> Result<TokenStream> {
   302→impl ToTokens for Display<'_> {
   303→    fn to_tokens(&self, tokens: &mut TokenStream) {
   342→impl ToTokens for Trait {
   343→    fn to_tokens(&self, tokens: &mut TokenStream) {
expand.rs
    12→pub fn derive(input: &DeriveInput) -> TokenStream {
    22→fn try_expand(input: &DeriveInput) -> Result<TokenStream> {
    31→fn impl_struct(input: Struct) -> TokenStream {
   221→fn impl_enum(input: Enum) -> TokenStream {
   505→pub(crate) fn call_site_ident(ident: &Ident) -> Ident {
   511→fn fields_pat(fields: &[Field]) -> TokenStream {
   526→fn use_as_display(needs_as_display: bool) -> Option<TokenStream> {
   536→fn from_initializer(
   537→    from_field: &Field,
   538→    backtrace_field: Option<&Field>,
   539→    source_var: &Ident,
   540→) -> TokenStream {
   565→fn type_is_option(ty: &Type) -> bool {
   569→fn unoptional_type(ty: &Type) -> TokenStream {
   574→fn type_parameter_of_option(ty: &Type) -> Option<&Type> {
fallback.rs
     7→pub(crate) fn expand(input: &DeriveInput, error: syn::Error) -> TokenStream {
fmt.rs
    15→impl Display<'_> {
    16→    pub fn expand_shorthand(&mut self, fields: &[Field], container: ContainerKind) -> Result<()> {
   166→struct FmtArguments {
   172→fn explicit_named_args(input: ParseStream) -> Result<FmtArguments> {
   192→fn try_explicit_named_args(input: ParseStream) -> Result<FmtArguments> {
   231→fn fallback_explicit_named_args(input: ParseStream) -> Result<FmtArguments> {
   255→fn is_syn_full() -> bool {
   273→fn take_int<'a>(read: &mut &'a str) -> &'a str {
   286→fn take_ident<'a>(read: &mut &'a str) -> &'a str {
   299→fn between<'a>(begin: ParseStream<'a>, end: ParseStream<'a>) -> TokenStream {
generics.rs
     8→pub struct ParamsInScope<'a> {
    12→impl<'a> ParamsInScope<'a> {
    13→    pub fn new(generics: &'a Generics) -> Self {
    19→    pub fn intersects(&self, ty: &Type) -> bool {
    26→fn crawl(in_scope: &ParamsInScope, ty: &Type, found: &mut bool) {
    48→pub struct InferredBounds {
    53→impl InferredBounds {
    54→    pub fn new() -> Self {
    61→    pub fn insert(&mut self, ty: impl ToTokens, bound: impl ToTokens) {
    74→    pub fn augment_where_clause(&self, generics: &Generics) -> WhereClause {
lib.rs
    23→mod ast;
    24→mod attr;
    25→mod expand;
    26→mod fallback;
    27→mod fmt;
    28→mod generics;
    29→mod prop;
    30→mod scan_expr;
    31→mod unraw;
    32→mod valid;
    40→pub fn derive_error(input: TokenStream) -> TokenStream {
    46→struct private;
    48→impl ToTokens for private {
    49→    fn to_tokens(&self, tokens: &mut proc_macro2::TokenStream) {
prop.rs
     6→impl Struct<'_> {
     7→    pub(crate) fn from_field(&self) -> Option<&Field> {
    11→    pub(crate) fn source_field(&self) -> Option<&Field> {
    15→    pub(crate) fn backtrace_field(&self) -> Option<&Field> {
    19→    pub(crate) fn distinct_backtrace_field(&self) -> Option<&Field> {
    25→impl Enum<'_> {
    26→    pub(crate) fn has_source(&self) -> bool {
    32→    pub(crate) fn has_backtrace(&self) -> bool {
    38→    pub(crate) fn has_display(&self) -> bool {
    53→impl Variant<'_> {
    54→    pub(crate) fn from_field(&self) -> Option<&Field> {
    58→    pub(crate) fn source_field(&self) -> Option<&Field> {
    62→    pub(crate) fn backtrace_field(&self) -> Option<&Field> {
    66→    pub(crate) fn distinct_backtrace_field(&self) -> Option<&Field> {
    72→impl Field<'_> {
    73→    pub(crate) fn is_backtrace(&self) -> bool {
    77→    pub(crate) fn source_span(&self) -> Span {
    88→fn from_field<'a, 'b>(fields: &'a [Field<'b>]) -> Option<&'a Field<'b>> {
    97→fn source_field<'a, 'b>(fields: &'a [Field<'b>]) -> Option<&'a Field<'b>> {
   112→fn backtrace_field<'a, 'b>(fields: &'a [Field<'b>]) -> Option<&'a Field<'b>> {
   127→fn distinct_backtrace_field<'a, 'b>(
   128→    backtrace_field: &'a Field<'b>,
   129→    from_field: Option<&Field>,
   130→) -> Option<&'a Field<'b>> {
   138→fn type_is_backtrace(ty: &Type) -> bool {
scan_expr.rs
     6→enum Input {
    25→enum Action {
    32→static INIT: [(Input, Action); 28] = [
    63→static POSTFIX: [(Input, Action); 10] = [
    76→static ASYNC: [(Input, Action); 3] = [
    82→static BLOCK: [(Input, Action); 1] = [(ConsumeBrace, SetState(&POSTFIX))];
    84→static BREAK_LABEL: [(Input, Action); 2] = [
    89→static BREAK_VALUE: [(Input, Action); 3] = [
    95→static CLOSURE: [(Input, Action); 6] = [
   104→static CLOSURE_ARGS: [(Input, Action); 2] = [
   109→static CLOSURE_RET: [(Input, Action); 2] = [
   114→static CONST: [(Input, Action); 2] = [
   119→static CONTINUE: [(Input, Action); 2] = [
   124→static DOT: [(Input, Action); 3] = [
   130→static FOR: [(Input, Action); 2] = [
   135→static IF_ELSE: [(Input, Action); 2] = [(Keyword("if"), SetState(&INIT)), (ConsumeBrace, DecDepth)];
   136→static IF_THEN: [(Input, Action); 2] =
   139→static METHOD: [(Input, Action); 1] = [(ExpectTurbofish, SetState(&POSTFIX))];
   141→static PATH: [(Input, Action); 4] = [
   148→static PATTERN: [(Input, Action); 15] = [
   166→static RANGE: [(Input, Action); 6] = [
   175→static RAW: [(Input, Action); 3] = [
   181→static REFERENCE: [(Input, Action); 3] = [
   187→static RETURN: [(Input, Action); 2] = [
   192→pub(crate) fn scan_expr(input: ParseStream) -> Result<()> {
unraw.rs
    12→pub struct IdentUnraw(Ident);
    14→impl IdentUnraw {
    15→    pub fn new(ident: Ident) -> Self {
    19→    pub fn to_local(&self) -> Ident {
    32→    pub fn set_span(&mut self, span: Span) {
    37→impl Display for IdentUnraw {
    38→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
    43→impl Eq for IdentUnraw {}
    45→impl PartialEq for IdentUnraw {
    46→    fn eq(&self, other: &Self) -> bool {
    51→impl PartialEq<str> for IdentUnraw {
    52→    fn eq(&self, other: &str) -> bool {
    57→impl Ord for IdentUnraw {
    58→    fn cmp(&self, other: &Self) -> Ordering {
    63→impl PartialOrd for IdentUnraw {
    64→    fn partial_cmp(&self, other: &Self) -> Option<Ordering> {
    69→impl Parse for IdentUnraw {
    70→    fn parse(input: ParseStream) -> Result<Self> {
    75→impl ToTokens for IdentUnraw {
    76→    fn to_tokens(&self, tokens: &mut TokenStream) {
    82→pub enum MemberUnraw {
    87→impl MemberUnraw {
    88→    pub fn span(&self) -> Span {
    96→impl Display for MemberUnraw {
    97→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
   105→impl Eq for MemberUnraw {}
   107→impl PartialEq for MemberUnraw {
   108→    fn eq(&self, other: &Self) -> bool {
   117→impl PartialEq<str> for MemberUnraw {
   118→    fn eq(&self, other: &str) -> bool {
   126→impl Hash for MemberUnraw {
   127→    fn hash<H: Hasher>(&self, hasher: &mut H) {
   135→impl ToTokens for MemberUnraw {
   136→    fn to_tokens(&self, tokens: &mut TokenStream) {
valid.rs
     5→impl Input<'_> {
     6→    pub(crate) fn validate(&self) -> Result<()> {
    14→impl Struct<'_> {
    15→    fn validate(&self) -> Result<()> {
    45→impl Enum<'_> {
    46→    fn validate(&self) -> Result<()> {
    66→impl Variant<'_> {
    67→    fn validate(&self) -> Result<()> {
    91→impl Field<'_> {
    92→    fn validate(&self) -> Result<()> {
   109→fn check_non_field_attrs(attrs: &Attrs) -> Result<()> {
   151→fn check_field_attrs(fields: &[Field]) -> Result<()> {
   224→fn contains_non_static_lifetime(ty: &Type) -> bool {
