tests/snapshots/snapshots__fixture_thiserror_root_level2.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
     1→derive(Error)
    21→## Example
    44→## Details
   211→## Comparison to anyhow
   223→#### License
build/probe.rs
    11→struct MyError(Thing);
    12→struct Thing;
    14→impl Debug for MyError {
    15→    fn fmt(&self, _formatter: &mut fmt::Formatter) -> fmt::Result {
    20→impl Display for MyError {
    21→    fn fmt(&self, _formatter: &mut fmt::Formatter) -> fmt::Result {
    26→impl Error for MyError {
    27→    fn provide<'a>(&'a self, request: &mut Request<'a>) {
    33→const _: Option<&str> = option_env!("RUSTC_BOOTSTRAP");
build.rs
    10→const PRIVATE: &str = "\
    18→fn main() {
    91→fn compile_probe(rustc_bootstrap: bool) -> bool {
   179→fn rustc_minor_version() -> Option<u32> {
   190→fn cargo_env_var(key: &str) -> OsString {
impl/src/ast.rs
    10→pub enum Input
    15→pub struct Struct
    22→pub struct Enum
    29→pub struct Variant
    36→pub struct Field
    45→pub enum ContainerKind
    54→impl<'a> Input<'a>
    55→    pub fn from_syn
    67→impl<'a> Struct<'a>
    68→    fn from_syn
    85→impl<'a> Enum<'a>
    86→    fn from_syn
   118→impl<'a> Variant<'a>
   119→    fn from_syn
   130→impl<'a> Field<'a>
   131→    fn multiple_from_syn
   139→    fn from_syn
   156→impl ContainerKind
   157→    fn from_struct
   165→    fn from_variant
   174→impl Display for ContainerKind
   175→    fn fmt
impl/src/attr.rs
    11→pub struct Attrs
    21→pub struct Display
    33→pub struct Source
    39→pub struct From
    45→pub struct Transparent
    51→pub struct Fmt
    57→pub enum Trait
    69→pub fn get
   124→fn parse_error_attribute
   196→fn parse_token_expr
   302→impl ToTokens for Display<'_>
   303→    fn to_tokens
   342→impl ToTokens for Trait
   343→    fn to_tokens
impl/src/expand.rs
    12→pub fn derive
    22→fn try_expand
    31→fn impl_struct
   221→fn impl_enum
   505→pub(crate) fn call_site_ident
   511→fn fields_pat
   526→fn use_as_display
   536→fn from_initializer
   565→fn type_is_option
   569→fn unoptional_type
   574→fn type_parameter_of_option
impl/src/fallback.rs
     7→pub(crate) fn expand
impl/src/fmt.rs
    15→impl Display<'_>
    16→    pub fn expand_shorthand
   166→struct FmtArguments
   172→fn explicit_named_args
   192→fn try_explicit_named_args
   231→fn fallback_explicit_named_args
   255→fn is_syn_full
   273→fn take_int
   286→fn take_ident
   299→fn between
impl/src/generics.rs
     8→pub struct ParamsInScope
    12→impl<'a> ParamsInScope<'a>
    13→    pub fn new
    19→    pub fn intersects
    26→fn crawl
    48→pub struct InferredBounds
    53→impl InferredBounds
    54→    pub fn new
    61→    pub fn insert
    74→    pub fn augment_where_clause
impl/src/lib.rs
    23→mod ast
    24→mod attr
    25→mod expand
    26→mod fallback
    27→mod fmt
    28→mod generics
    29→mod prop
    30→mod scan_expr
    31→mod unraw
    32→mod valid
    40→pub fn derive_error
    46→struct private
    48→impl ToTokens for private
    49→    fn to_tokens
impl/src/prop.rs
     6→impl Struct<'_>
     7→    pub(crate) fn from_field
    11→    pub(crate) fn source_field
    15→    pub(crate) fn backtrace_field
    19→    pub(crate) fn distinct_backtrace_field
    25→impl Enum<'_>
    26→    pub(crate) fn has_source
    32→    pub(crate) fn has_backtrace
    38→    pub(crate) fn has_display
    53→impl Variant<'_>
    54→    pub(crate) fn from_field
    58→    pub(crate) fn source_field
    62→    pub(crate) fn backtrace_field
    66→    pub(crate) fn distinct_backtrace_field
    72→impl Field<'_>
    73→    pub(crate) fn is_backtrace
    77→    pub(crate) fn source_span
    88→fn from_field
    97→fn source_field
   112→fn backtrace_field
   127→fn distinct_backtrace_field
   138→fn type_is_backtrace
impl/src/scan_expr.rs
     6→enum Input
    25→enum Action
    32→static INIT
    63→static POSTFIX
    76→static ASYNC
    82→static BLOCK
    84→static BREAK_LABEL
    89→static BREAK_VALUE
    95→static CLOSURE
   104→static CLOSURE_ARGS
   109→static CLOSURE_RET
   114→static CONST
   119→static CONTINUE
   124→static DOT
   130→static FOR
   135→static IF_ELSE
   136→static IF_THEN
   139→static METHOD
   141→static PATH
   148→static PATTERN
   166→static RANGE
   175→static RAW
   181→static REFERENCE
   187→static RETURN
   192→pub(crate) fn scan_expr
impl/src/unraw.rs
    12→pub struct IdentUnraw
    14→impl IdentUnraw
    15→    pub fn new
    19→    pub fn to_local
    32→    pub fn set_span
    37→impl Display for IdentUnraw
    38→    fn fmt
    43→impl Eq for IdentUnraw
    45→impl PartialEq for IdentUnraw
    46→    fn eq
    51→impl PartialEq<str> for IdentUnraw
    52→    fn eq
    57→impl Ord for IdentUnraw
    58→    fn cmp
    63→impl PartialOrd for IdentUnraw
    64→    fn partial_cmp
    69→impl Parse for IdentUnraw
    70→    fn parse
    75→impl ToTokens for IdentUnraw
    76→    fn to_tokens
    82→pub enum MemberUnraw
    87→impl MemberUnraw
    88→    pub fn span
    96→impl Display for MemberUnraw
    97→    fn fmt
   105→impl Eq for MemberUnraw
   107→impl PartialEq for MemberUnraw
   108→    fn eq
   117→impl PartialEq<str> for MemberUnraw
   118→    fn eq
   126→impl Hash for MemberUnraw
   127→    fn hash
   135→impl ToTokens for MemberUnraw
   136→    fn to_tokens
impl/src/valid.rs
     5→impl Input<'_>
     6→    pub(crate) fn validate
    14→impl Struct<'_>
    15→    fn validate
    45→impl Enum<'_>
    46→    fn validate
    66→impl Variant<'_>
    67→    fn validate
    91→impl Field<'_>
    92→    fn validate
   109→fn check_non_field_attrs
   151→fn check_field_attrs
   224→fn contains_non_static_lifetime
src/aserror.rs
     5→pub trait AsDynError<'a>: Sealed {
     6→    fn as_dyn_error(&self) -> &(dyn Error + 'a);
     9→impl<'a, T: Error + 'a> AsDynError<'a> for T {
    11→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    16→impl<'a> AsDynError<'a> for dyn Error + 'a {
    18→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    23→impl<'a> AsDynError<'a> for dyn Error + Send + 'a {
    25→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    30→impl<'a> AsDynError<'a> for dyn Error + Send + Sync + 'a {
    32→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    37→impl<'a> AsDynError<'a> for dyn Error + Send + Sync + UnwindSafe + 'a {
    39→    fn as_dyn_error(&self) -> &(dyn Error + 'a) {
    45→pub trait Sealed {}
    46→impl<T: Error> Sealed for T {}
    47→impl Sealed for dyn Error + '_ {}
    48→impl Sealed for dyn Error + Send + '_ {}
    49→impl Sealed for dyn Error + Send + Sync + '_ {}
    50→impl Sealed for dyn Error + Send + Sync + UnwindSafe + '_ {}
src/display.rs
     6→pub trait AsDisplay<'a>: Sealed {
    11→    fn as_display(&'a self) -> Self::Target;
    14→impl<'a, T> AsDisplay<'a> for &T
    15→where
    16→    T: Display + ?Sized + 'a,
    17→{
    18→    type Target = &'a T;
    20→    fn as_display(&'a self) -> Self::Target {
    26→impl<'a> AsDisplay<'a> for Path {
    27→    type Target = path::Display<'a>;
    30→    fn as_display(&'a self) -> Self::Target {
    36→impl<'a> AsDisplay<'a> for PathBuf {
    37→    type Target = path::Display<'a>;
    40→    fn as_display(&'a self) -> Self::Target {
    46→pub trait Sealed {}
    47→impl<T: Display + ?Sized> Sealed for &T {}
    49→impl Sealed for Path {}
    51→impl Sealed for PathBuf {}
    59→mod placeholder {
    64→    pub struct Placeholder;
    66→    impl<'a> AsDisplay<'a> for Placeholder {
    67→        type Target = Self;
    70→        fn as_display(&'a self) -> Self::Target {
    75→    impl Display for Placeholder {
    76→        fn fmt(&self, _formatter: &mut fmt::Formatter) -> fmt::Result {
    81→    impl Sealed for Placeholder {}
src/lib.rs
   281→mod aserror;
   282→mod display;
   284→mod provide;
   285→mod var;
   289→mod private;
src/private.rs
src/provide.rs
     4→pub trait ThiserrorProvide: Sealed {
     5→    fn thiserror_provide<'a>(&'a self, request: &mut Request<'a>);
     8→impl<T> ThiserrorProvide for T
     9→where
    10→    T: Error + ?Sized,
    11→{
    13→    fn thiserror_provide<'a>(&'a self, request: &mut Request<'a>) {
    19→pub trait Sealed {}
    20→impl<T: Error + ?Sized> Sealed for T {}
src/var.rs
     3→pub struct Var<'a, T: ?Sized>(pub &'a T);
     5→impl<'a, T: Pointer + ?Sized> Pointer for Var<'a, T> {
     6→    fn fmt(&self, formatter: &mut fmt::Formatter) -> fmt::Result {
